--- a/main.html
+++ b/main.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div class="holder">
+		<div>3</div>
+				<div>1</div>
+				<div>2</div>
+		
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
